# gobtools

./: README.md  pyproject.toml
.github/workflows/: ci.yml  format.yml
src/gobtools/: __init__.py
src/gobtools/utils/: client.py  json.py
src/gobtools/weaver/: controller.py
tests/: test_sample.py
